# llm-zoomcamp-2026

./:  persinsent_rag.ipynb   persinsent_rag_ingest.ipynb  .gitignore  README.md  pyproject.toml  rag.ipynb  rag_helper.py
01-agentic-rag/: homework.ipynb  notebook.ipynb
02-vector-search/: 03-embeddings-dataset.ipynb  homework2.ipynb
llm-zoomcamp-onnx/: main.py  pyproject.toml
